urbi-console -> urbi.
And also move the binaries from src to src/bin, at least to avoid the
clashes bw src/urbi which is a directory, and src/urbi, formerly
known as urbi-console.

	* KNOWN_BUGS: Remove, obsolete and unused.

	* scripts/urbi-console.bat.in: Rename as...
	* scripts/urbi.bat.in: this.
	* src/urbi-console.cc: Rename as...
	* src/bin/urbi.cc: this.
	* src/ast-dump.cc: Rename as...
	* src/bin/ast-dump.cc: this.

	* src/Makefile.am, tests, Makefile.am, configure.ac,
	* doc/QUICK-START.txt, doc/RELEASE-NOTES.txt,
	* doc/REPORTING-BUGS.txt, doc/installation.tex,
	* doc/specs/lang.tex, doc/tutorial/tutorial.tex,
	* scripts/package.in, tests-local.mk:
	Adjust.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -8,10 +8,12 @@ release.
 Auxiliary programs
 ==================
 
-urbi-send no longer displays the server version banner, unless given
+"urbi-send" no longer displays the server version banner, unless given
 -b/--banner.
 
-urbi-console.bat should now work out of the box under windows.
+"urbi-console" is now called simply "urbi".
+
+"urbi.bat" should now work out of the box under windows.
 
 
 Syntax of events
