--- a/doc/installation.tex
+++ b/doc/installation.tex
@@ -73,8 +73,8 @@ Running the various programs is the quickest way to test your urbi
 installation.
 
 \begin{shell}
-# Check that urbi-console is properly set up.
-$ urbi-console --version
+# Check that urbi is properly set up.
+$ urbi --version
 # Check that urbi-launch is properly installed.
 $ urbi-launch --version
 # Check that urbi-launch can find its dependencies.
