--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -190,7 +190,7 @@ for ``one second and 1 millisecond'', is strictly equivalent to
   \centering
   \begin{tabular}{|c|c|c|}
     \hline
-    unit        & abbreviation & equivalence for n         \\
+    unit        & abbreviation & equivalence for $n$  \\
     \hline
     millisecond & ms           & $n / 1000$         \\
     second      & s            & $n$                \\
