--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -144,7 +144,7 @@ simpler start anew: shutdown your current server, and spawn a new one.
 This section intends to provide the most basic notions to write \us
 code. Some aspects are presented only superficially. The point of this
 section is to bootstrap yourself with the \us language, to be able
-to study more in-depth examples afterwards.
+to study more in-depth examples afterward.
 
 \section{Comments\index{comment}}
 
@@ -213,7 +213,7 @@ You can call functions with the classical, mathematical notation
 (\autoref{lst:tut:calling-functions}).
 
 \begin{urbiscript}[caption=Calling functions,label=lst:tut:calling-functions]
-cos(0); // Compute cosinus
+cos(0); // Compute cosine
 [00000000] 1
 max(1, 3); // Get the maximum of the arguments.
 [00000000] 3
@@ -233,7 +233,7 @@ echo("Hello world!");
 \end{urbiscript}
 
 The server prints out \lstinline{Hello world!}, as expected. Note that
-this output is still prepended with the timestamp. Since echo returns
+this output is still prepended with the time stamp. Since echo returns
 void, no evaluation result is printed.
 
 \section{Variables\index{variable}}
@@ -257,7 +257,7 @@ you can write code like ``\lstinline|x = y = 0|''. The rule for valid
 identifiers is also the same as in \Cxx: they may contain alphanumeric
 characters and underscores, but they may not start with a digit.
 
-You may ommit the initialization value, in which case it defaults to
+You may omit the initialization value, in which case it defaults to
 \lstinline|void| (\autoref{lst:tut:local-uninit}).
 
 \begin{urbiscript}[caption=Variables initialization defaults to
@@ -456,7 +456,7 @@ we want a fresh object to work on. In \us, \lstinline{Object} is the
 parent type of every object (in fact, since \us is prototype-based,
 \lstinline{Object} is the uppermost prototype of every object, but we'll
 talk about prototypes later). An instance of object, is an empty,
-neutral object, so let's start by instanciating one with the
+neutral object, so let's start by instantiating one with the
 \lstinline{clone} method of \lstinline{Object} (\autoref{lst:tut:object-new}).
 
 \begin{urbiscript}[caption=Instanciating a new object,
@@ -550,7 +550,7 @@ get(x, "bar");
 \end{urbiscript}
 
 Right, now we can create fresh objects, create slots in them and read
-them afterwards, even if their name is dynamically computed, with
+them afterward, even if their name is dynamically computed, with
 \lstinline{getSlot} and \lstinline{setSlot}. Now, you might wonder if
 there's a method to update the value of the slot. Guess what, there's
 one, and it's named\ldots \lstinline{updateSlot} (originality
@@ -602,7 +602,7 @@ o.c = 1;
 [00000000] 1
 \end{urbiscript}
 
-Finally, use \lstinline{removeslot} to delete a slot from an object
+Finally, use \lstinline{removeSlot} to delete a slot from an object
 (\autoref{lst:tut:removeslot}).
 
 \begin{urbiscript}[caption=Removing a slot, label=lst:tut:removeslot,
@@ -692,7 +692,7 @@ label=lst:tut:getslot-function]
 \end{urbiscript}
 
 So the empty function simply checks whether the target string is empty
-with the equality operator! Let's try getSloting another method in
+with the equality operator! Let's try \lstinline{getSlot}'ing another method in
 \autoref{lst:tut:getslot-primitive}.
 
 \begin{urbiscript}[caption=Primitives, label=lst:tut:getslot-primitive]
@@ -1093,7 +1093,7 @@ echo({1; 2; 3});
 
 \section{Advanced scoping}
 
-Scopes can be nested. Variables can be redefined in subscope. In this
+Scopes can be nested. Variables can be redefined in sub-scope. In this
 case, the new variables hide the old one in this scope (that is, the
 innermost variable takes precedence), as illustrated in
 \autoref{lst:tut:scope-hiding}.
@@ -1216,7 +1216,7 @@ You're probably already familiar with class-based object programing,
 since this is the \Cxx model. Prototype-based object programing is
 slightly different: it has no actual types. Instead, you have an
 object, that is already an instance, and that you might clone to
-obtain a new one that you can modify afterwards. Prototype-based
+obtain a new one that you can modify afterward. Prototype-based
 programming was introduced by the Self language, and is used in
 several popular script languages such as \io or \js.
 
@@ -1722,7 +1722,7 @@ language. Parallelism is one of the corner stone of its paradigm, and
 what makes it so adapted to high level scripting of interactive
 agents, such as robotics or \ai.
 
-\section{Parralelism operators}
+\section{Parallelism operators}
 
 For now, we've separated our different commands with a semicolon
 (\lstinline{;}). There are actually other separators in \us:
@@ -1781,7 +1781,7 @@ The difference between ``\lstinline{\&}'' and ``\lstinline{,}'' is rather
 subtle:
 
 \begin{itemize}
-\item In the toplevel, will wait for you to terminate your
+\item In the top level, will wait for you to terminate your
   ``\lstinline{\&}'' block to start executing anything, while it will run
   the code terminated by ``\lstinline{,}'' immediately.
 \item Execution is blocked after a ``\lstinline{\&}'' group until all its
@@ -1860,7 +1860,7 @@ mytag: echo("tagged");
 You can use tag that wasn't declared previously, they will be created
 implicitly (\autoref{lst:tut:implicit-tag}). However, this is fragile code since
 tags will be created in a global scope, the \lstinline{Tag} object. This
-feature can be used when inputting test code in the toplevel to avoid
+feature can be used when inputting test code in the top level to avoid
 bothering to declare each tag, yet it should be considered very bad
 practice in regular code.
 
@@ -2184,9 +2184,21 @@ myEvent! ~ 300ms;
 
 %\section{Valued events}
 
-
 %\chapter{Standard \us library}
 
 %\section{Printing}
 
 %\chapter{Binding with \Cxx - UObjects}
+
+% LocalWords:  urbi UObjects faq Gostai SAS SDK ec Libport ident rlwrap isVoid
+% LocalWords:  localhost variadic prepended asString myFunction succ slotNames
+% LocalWords:  asFoo setSlot getSlot updateSlot removeSlot uid uids arg ok ko
+% LocalWords:  elt baz quux printSalaries computeSalary protos addProto lookup
+% LocalWords:  removeProto proto o's locateSlot myObj MyPair predefines init
+% LocalWords:  evalArgAt myand lhs ary mytag timeOut onleave myEvent
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../urbi-sdk"
+%%% End:
