doc: display the package revision.
	* doc/Makefile.am (REVISION_FILE): New.
	* doc/urbi-report.sty (\subtitle): New.
	Honor it.
	* doc/urbi-sdk.tex: Use revision.sty and use it as subtitle.

--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -164,10 +164,14 @@
 
     \begin{center}
       {\Huge\bf\@title\\}
+      \ifx\empty\@subtitle\else%
+        \vspace{.5cm}
+        \noindent\textbf{\LARGE \@subtitle}\par\nobreak%
+      \fi%
       \vspace{1cm}
-      {\Large \@author\\}
+      {\LARGE \@author\\}
       \vspace{1cm}
-      {\large \@date\\}
+      {\Large \@date\\}
     \end{center}
 
     \vfill
@@ -176,11 +180,13 @@
       \centering
       \includegraphics[width=12cm]{img/gostai}
     \end{figure}
-
-    \vfill
-    \global\let\title\relax
+%
+%    \vfill
+%    \global\let\title\relax
   \end{titlepage}
 }
+\newcommand{\subtitle}[1]{\def\@subtitle{#1}}
+\subtitle{}
 
 %% ---------- %%
 %% Hyperref.  %%
