--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -5,9 +5,11 @@
   \makeindex
   \usepackage{urbi-report}
   \usepackage{indexing}
+  \usepackage{revision}
 
 % CONFIGURATION
 \title{The Urbi Software Development Kit}
+\subtitle{\VcsVersionRev}
 \author{Kernel Team}
 
 % DOCUMENT
